Big AI Update and some new maps too

--- a/4MbToMidnight/4MbToMidnight.vcxproj.filters
+++ b/4MbToMidnight/4MbToMidnight.vcxproj.filters
@@ -81,6 +81,12 @@
     <ClCompile Include="Syringe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Colleen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Beacon.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\EntityVertexShader.glsl">
@@ -179,6 +185,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Platform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Colleen.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AnimationDesc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Beacon.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TileDef.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
