--- a/4MbToMidnight/4MbToMidnight.vcxproj
+++ b/4MbToMidnight/4MbToMidnight.vcxproj
@@ -147,7 +147,7 @@ xcopy ..\*.glsl $(TargetDir) /y</Command>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Collin\Code\4MbToMidnight;C:\Program Files (x86)\OpenAL 1.1 SDK\libs\Win64;..\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Program Files (x86)\OpenAL 1.1 SDK\libs\Win64;..\Lib;Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libvorbis_static.lib;libvorbisfile_static.lib;libogg.lib;OpenAL32.lib;glfw3.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
@@ -179,6 +179,8 @@ xcopy ..\*.glsl $(TargetDir)\....\ /y</Command>
     <ClCompile Include="..\YellowKey.cpp" />
     <ClCompile Include="..\Zombie.cpp" />
     <ClCompile Include="..\ZombieGib.cpp" />
+    <ClCompile Include="Beacon.cpp" />
+    <ClCompile Include="Colleen.cpp" />
     <ClCompile Include="Syringe.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -214,8 +216,12 @@ xcopy ..\*.glsl $(TargetDir)\....\ /y</Command>
     <ClInclude Include="..\YellowKey.hpp" />
     <ClInclude Include="..\Zombie.hpp" />
     <ClInclude Include="..\ZombieGib.hpp" />
+    <ClInclude Include="AnimationDesc.h" />
+    <ClInclude Include="Beacon.hpp" />
+    <ClInclude Include="Colleen.hpp" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Syringe.hpp" />
+    <ClInclude Include="TileDef.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
